# CorisDB_Curation

./: .gitignore  BACKUP.sh  GIT_RM_FILE_PERMANENTLY.md  README.md  delete.md  docker-compose.yml  pyproject.toml
22-2198-AMD/: README.md
22-2198-AMD/amd.hh_c3854/: amd.hh_t1_person.sql  amd.hh_t2_note_image.sql  amd.hh_t3_comorbidities.sql  amd.hh_t4_control.sql  amd_stats.sql  export_query_csv.py  query_for_stuck_query.sql  read_csv.py  readme_pyenv.md
22-2198-AMD/diabetic.hh_c3940/: diabetic.hh_t1_person.sql  diabetic.hh_t2_note_image.sql  diabetic.hh_t3_comorbidities.sql  diabetic.hh_t4_control.sql  export_query_csv.py  readme_pyenv.py
22-2198-AMD/snowflake.hh/: create_table_snowflake.hh_t1_cohort.sql  create_table_snowflake.hh_t2_image_note.sql  import_table_snowflake.hh_t1_cohort.sql  import_table_snowflake.hh_t2_image_note.sql  query_csv.py  read_csv.py  read_j2k_note_test.py  readme_pyenv.md  snowflake.hh_stats.sql  snowflake.hh_t1_cohort.sql  snowflake.hh_t2_image_note.sql
23-0284-CORIS/: README.md  coris_registry.bb_gbq_diagnosis_20240925.sql  coris_registry_diagnosis.sql
23-0284-CORIS/coris_registry_tables/: README.md  (+1 more)
23-0663-GLAUCOMA/: README.md  glaucoma.bb_gbq_t3_glaucoma_diagnosis_20240925.sql
23-1594-ROP/: README.md
23-1641-CATARACT/: README.md
23-1643-DRY-EYE/: README.md
23-1818-PARKINSONS/: README.md
Schemes/: README.md  add_sopclass_description.py  parse_dicom_for_postgres_parallel.py  read_xml_parallel.py
archive/: convert_types_and_create_data_AMD-Epi.py  make_postgres_importable_files_AMD-Epi.py
flask/: .env_sample  Dockerfile  app.ini  app.py  building_flask.sh  requirements.txt  test_postgres_connection.py
guis/: AF_vs_IR_screening_GUI.py  data_quality_screening_GUI.py  modality_screening.py  run_gui.sh  run_modality_gui.sh  run_quality_gui.sh
nginx/: Dockerfile  nginx.conf  vueflask.conf
postgres/: .env_sample  README.md  convert_types_and_create_data.py  make_postgres_importable_files.py
utils/: copy_from_csv.py  pdf_to_png.py  preview.py  preview_parallel.py  process_csv_for_image_folder.py  strip_filepath_from_csv.py
vue/: Dockerfile
(+408 files in other folders)
